--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
-  "dependencies": {
-    "lodash": "^4.17.21"
-  },
-  "scripts": {
-    "start": "node server.js"
-  },
   "name": "movie_api",
-  "description": "",
   "version": "1.0.0",
-  "main": "server.js",
-  "devDependencies": {},
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/HZeligman/movie_api.git"
