--- a/.gitignore
+++ b/.gitignore
@@ -2613,3 +2613,32 @@ node_modules/accepts/LICENSE
 node_modules/accepts/index.js
 node_modules/accepts/HISTORY.md
 node_modules/.bin/mime
+node_modules/send/node_modules/.DS_Store
+node_modules/send/.DS_Store
+node_modules/on-headers/README.md
+node_modules/on-headers/package.json
+node_modules/on-headers/LICENSE
+node_modules/on-headers/index.js
+node_modules/on-headers/HISTORY.md
+node_modules/morgan/README.md
+node_modules/morgan/package.json
+node_modules/morgan/node_modules/on-finished/README.md
+node_modules/morgan/node_modules/on-finished/package.json
+node_modules/morgan/node_modules/on-finished/LICENSE
+node_modules/morgan/node_modules/on-finished/index.js
+node_modules/morgan/node_modules/on-finished/HISTORY.md
+node_modules/morgan/LICENSE
+node_modules/morgan/index.js
+node_modules/morgan/HISTORY.md
+node_modules/morgan/.DS_Store
+node_modules/basic-auth/README.md
+node_modules/basic-auth/package.json
+node_modules/basic-auth/node_modules/safe-buffer/README.md
+node_modules/basic-auth/node_modules/safe-buffer/package.json
+node_modules/basic-auth/node_modules/safe-buffer/LICENSE
+node_modules/basic-auth/node_modules/safe-buffer/index.js
+node_modules/basic-auth/node_modules/safe-buffer/index.d.ts
+node_modules/basic-auth/LICENSE
+node_modules/basic-auth/index.js
+node_modules/basic-auth/HISTORY.md
+node_modules/basic-auth/.DS_Store
