--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
-    "morgan": "^1.10.0"
+    "lodash": "^4.17.21",
+    "morgan": "^1.10.0",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
