--- a/.gitignore
+++ b/.gitignore
@@ -5141,3 +5141,211 @@ node_modules/mongoose/.DS_Store
 node_modules/mongoose/lib/helpers/.DS_Store
 node_modules/mongoose/lib/helpers/path/.DS_Store
 node_modules/mongoose/node_modules/.DS_Store
+node_modules/which/bin/which
+node_modules/update-check/README.md
+node_modules/update-check/package.json
+node_modules/update-check/node_modules/registry-url/readme.md
+node_modules/update-check/node_modules/registry-url/package.json
+node_modules/update-check/node_modules/registry-url/license
+node_modules/update-check/node_modules/registry-url/index.js
+node_modules/update-check/node_modules/registry-auth-token/yarn.lock
+node_modules/update-check/node_modules/registry-auth-token/test/registry-url.test.js
+node_modules/update-check/node_modules/registry-auth-token/test/auth-token.test.js
+node_modules/update-check/node_modules/registry-auth-token/registry-url.js
+node_modules/update-check/node_modules/registry-auth-token/README.md
+node_modules/update-check/node_modules/registry-auth-token/package.json
+node_modules/update-check/node_modules/registry-auth-token/LICENSE
+node_modules/update-check/node_modules/registry-auth-token/index.js
+node_modules/update-check/node_modules/registry-auth-token/CHANGELOG.md
+node_modules/update-check/node_modules/registry-auth-token/base64.js
+node_modules/update-check/LICENSE
+node_modules/update-check/index.js
+node_modules/update-check/.yarnrc
+node_modules/update-check/.editorconfig
+node_modules/strip-eof/readme.md
+node_modules/strip-eof/package.json
+node_modules/strip-eof/license
+node_modules/strip-eof/index.js
+node_modules/serve/README.md
+node_modules/serve/package.json
+node_modules/serve/node_modules/color-name/test.js
+node_modules/serve/node_modules/color-name/README.md
+node_modules/serve/node_modules/color-name/package.json
+node_modules/serve/node_modules/color-name/LICENSE
+node_modules/serve/node_modules/color-name/index.js
+node_modules/serve/node_modules/color-name/.npmignore
+node_modules/serve/node_modules/color-name/.eslintrc.json
+node_modules/serve/node_modules/color-convert/route.js
+node_modules/serve/node_modules/color-convert/README.md
+node_modules/serve/node_modules/color-convert/package.json
+node_modules/serve/node_modules/color-convert/LICENSE
+node_modules/serve/node_modules/color-convert/index.js
+node_modules/serve/node_modules/color-convert/conversions.js
+node_modules/serve/node_modules/color-convert/CHANGELOG.md
+node_modules/serve/node_modules/chalk/types/index.d.ts
+node_modules/serve/node_modules/chalk/templates.js
+node_modules/serve/node_modules/chalk/readme.md
+node_modules/serve/node_modules/chalk/package.json
+node_modules/serve/node_modules/chalk/license
+node_modules/serve/node_modules/chalk/index.js.flow
+node_modules/serve/node_modules/chalk/index.js
+node_modules/serve/node_modules/ansi-styles/readme.md
+node_modules/serve/node_modules/ansi-styles/package.json
+node_modules/serve/node_modules/ansi-styles/license
+node_modules/serve/node_modules/ansi-styles/index.js
+node_modules/serve/LICENSE
+node_modules/serve/bin/serve.js
+node_modules/serve-handler/src/index.js
+node_modules/serve-handler/src/glob-slash.js
+node_modules/serve-handler/src/error.js
+node_modules/serve-handler/src/directory.js
+node_modules/serve-handler/README.md
+node_modules/serve-handler/package.json
+node_modules/serve-handler/node_modules/range-parser/README.md
+node_modules/serve-handler/node_modules/range-parser/package.json
+node_modules/serve-handler/node_modules/range-parser/LICENSE
+node_modules/serve-handler/node_modules/range-parser/index.js
+node_modules/serve-handler/node_modules/range-parser/HISTORY.md
+node_modules/serve-handler/node_modules/path-to-regexp/Readme.md
+node_modules/serve-handler/node_modules/path-to-regexp/package.json
+node_modules/serve-handler/node_modules/path-to-regexp/LICENSE
+node_modules/serve-handler/node_modules/path-to-regexp/index.js
+node_modules/serve-handler/node_modules/path-to-regexp/index.d.ts
+node_modules/serve-handler/node_modules/path-to-regexp/History.md
+node_modules/serve-handler/node_modules/minimatch/README.md
+node_modules/serve-handler/node_modules/minimatch/package.json
+node_modules/serve-handler/node_modules/minimatch/minimatch.js
+node_modules/serve-handler/node_modules/minimatch/LICENSE
+node_modules/serve-handler/node_modules/mime-types/README.md
+node_modules/serve-handler/node_modules/mime-types/package.json
+node_modules/serve-handler/node_modules/mime-types/LICENSE
+node_modules/serve-handler/node_modules/mime-types/index.js
+node_modules/serve-handler/node_modules/mime-types/HISTORY.md
+node_modules/serve-handler/node_modules/mime-db/README.md
+node_modules/serve-handler/node_modules/mime-db/package.json
+node_modules/serve-handler/node_modules/mime-db/LICENSE
+node_modules/serve-handler/node_modules/mime-db/index.js
+node_modules/serve-handler/node_modules/mime-db/HISTORY.md
+node_modules/serve-handler/node_modules/mime-db/db.json
+node_modules/serve-handler/node_modules/content-disposition/README.md
+node_modules/serve-handler/node_modules/content-disposition/package.json
+node_modules/serve-handler/node_modules/content-disposition/LICENSE
+node_modules/serve-handler/node_modules/content-disposition/index.js
+node_modules/serve-handler/node_modules/content-disposition/HISTORY.md
+node_modules/serve-handler/node_modules/bytes/Readme.md
+node_modules/serve-handler/node_modules/bytes/package.json
+node_modules/serve-handler/node_modules/bytes/LICENSE
+node_modules/serve-handler/node_modules/bytes/index.js
+node_modules/serve-handler/node_modules/bytes/History.md
+node_modules/serve-handler/LICENSE
+node_modules/path-is-inside/package.json
+node_modules/path-is-inside/LICENSE.txt
+node_modules/path-is-inside/lib/path-is-inside.js
+node_modules/p-finally/readme.md
+node_modules/p-finally/package.json
+node_modules/p-finally/license
+node_modules/p-finally/index.js
+node_modules/npm-run-path/readme.md
+node_modules/npm-run-path/package.json
+node_modules/npm-run-path/license
+node_modules/npm-run-path/index.js
+node_modules/nice-try/src/index.js
+node_modules/nice-try/README.md
+node_modules/nice-try/package.json
+node_modules/nice-try/LICENSE
+node_modules/nice-try/CHANGELOG.md
+node_modules/is-wsl/readme.md
+node_modules/is-wsl/package.json
+node_modules/is-wsl/license
+node_modules/is-wsl/index.js
+node_modules/is-wsl/index.d.ts
+node_modules/is-stream/readme.md
+node_modules/is-stream/package.json
+node_modules/is-stream/license
+node_modules/is-stream/index.js
+node_modules/is-docker/readme.md
+node_modules/is-docker/package.json
+node_modules/is-docker/license
+node_modules/is-docker/index.js
+node_modules/is-docker/index.d.ts
+node_modules/is-docker/cli.js
+node_modules/fast-url-parser/src/urlparser.js
+node_modules/fast-url-parser/README.md
+node_modules/fast-url-parser/package.json
+node_modules/fast-url-parser/node_modules/punycode/README.md
+node_modules/fast-url-parser/node_modules/punycode/punycode.js
+node_modules/fast-url-parser/node_modules/punycode/package.json
+node_modules/fast-url-parser/node_modules/punycode/LICENSE-MIT.txt
+node_modules/fast-url-parser/LICENSE
+node_modules/fast-url-parser/.npmignore
+node_modules/execa/readme.md
+node_modules/execa/package.json
+node_modules/execa/license
+node_modules/execa/lib/stdio.js
+node_modules/execa/lib/errname.js
+node_modules/execa/index.js
+node_modules/compression/README.md
+node_modules/compression/package.json
+node_modules/compression/node_modules/safe-buffer/README.md
+node_modules/compression/node_modules/safe-buffer/package.json
+node_modules/compression/node_modules/safe-buffer/LICENSE
+node_modules/compression/node_modules/safe-buffer/index.js
+node_modules/compression/node_modules/safe-buffer/index.d.ts
+node_modules/compression/node_modules/bytes/Readme.md
+node_modules/compression/node_modules/bytes/package.json
+node_modules/compression/node_modules/bytes/LICENSE
+node_modules/compression/node_modules/bytes/index.js
+node_modules/compression/node_modules/bytes/History.md
+node_modules/compression/LICENSE
+node_modules/compression/index.js
+node_modules/compression/HISTORY.md
+node_modules/compressible/README.md
+node_modules/compressible/package.json
+node_modules/compressible/LICENSE
+node_modules/compressible/index.js
+node_modules/compressible/HISTORY.md
+node_modules/clipboardy/readme.md
+node_modules/clipboardy/package.json
+node_modules/clipboardy/license
+node_modules/clipboardy/lib/windows.js
+node_modules/clipboardy/lib/termux.js
+node_modules/clipboardy/lib/macos.js
+node_modules/clipboardy/lib/linux.js
+node_modules/clipboardy/index.js
+node_modules/clipboardy/index.d.ts
+node_modules/clipboardy/fallbacks/windows/clipboard_x86_64.exe
+node_modules/clipboardy/fallbacks/windows/clipboard_i686.exe
+node_modules/clipboardy/fallbacks/windows/.DS_Store
+node_modules/clipboardy/fallbacks/linux/xsel
+node_modules/clipboardy/fallbacks/.DS_Store
+node_modules/clipboardy/browser.js
+node_modules/arg/yarn.lock
+node_modules/arg/test.js
+node_modules/arg/README.md
+node_modules/arg/package.json
+node_modules/arg/LICENSE.md
+node_modules/arg/index.js
+node_modules/arg/.editorconfig
+node_modules/arch/README.md
+node_modules/arch/package.json
+node_modules/arch/LICENSE
+node_modules/arch/index.js
+node_modules/arch/index.d.ts
+node_modules/arch/browser.js
+node_modules/@zeit/schemas/yarn.lock
+node_modules/@zeit/schemas/user/index.js
+node_modules/@zeit/schemas/test/user.js
+node_modules/@zeit/schemas/test/deployment.js
+node_modules/@zeit/schemas/test/deployment-env.js
+node_modules/@zeit/schemas/README.md
+node_modules/@zeit/schemas/package.json
+node_modules/@zeit/schemas/LICENSE
+node_modules/@zeit/schemas/deployment/config.js
+node_modules/@zeit/schemas/deployment/config-static.js
+node_modules/@zeit/schemas/deployment/config-env.js
+node_modules/@zeit/schemas/.yarnrc
+node_modules/@zeit/schemas/.editorconfig
+node_modules/@zeit/schemas/.circleci/config.yml
+node_modules/.bin/which
+node_modules/.bin/serve
+node_modules/.bin/is-docker
