--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "serve": "^13.0.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
