--- a/package.json
+++ b/package.json
@@ -38,3 +38,12 @@
     "nodemon": "^2.0.16"
   }
 }
+
+"scripts": {
+"dev": "react-scripts start",
+"start": "serve -s build",
+"build": "react-scripts build",
+"test": "react-scripts test --env=jsdom",
+"eject": "react-scripts eject",
+"heroku-postbuild": "npm run build"
+}
