--- a/package.json
+++ b/package.json
@@ -4,14 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-  "dev": "react-scripts start",
-  "start": "serve -s build",
-  "build": "react-scripts build",
-  "test": "react-scripts test --env=jsdom",
-  "eject": "react-scripts eject",
-  "heroku-postbuild": "npm run build"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
-  
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/HZeligman/movie_api.git"
@@ -43,5 +39,3 @@
     "nodemon": "^2.0.16"
   }
 }
-
-
